[package]
name = "r64emu"
version = "0.1.0"
authors = ["Giovanni Bajo <rasky@develer.com>"]

[dependencies]
emu = {path =  "./emu"}
emu_derive = {path =  "./emu/emu-derive"}
num = "0.1.42"
error-chain = "0.12.0"
pretty-hex = "0.1.0"
slog = "2.2.3"
slog-async = "2.3.0"
slog-term = "2.4.0"
crc = "^1.0.0"
lazy_static = "1.0"
bitflags = "1.0"
bit_field = "0.9.0"
bitfield = "0.13.0"
enum-map = "0.4.0"
phf = "0.7.21"
phf_macros = "0.7.22"

[dev-dependencies]
image = "0.13"
base64 = "0.9.2"
failure = "0.1.1"

[dependencies.byteorder]
version = "1"
features = ["i128"]

[dependencies.packed_simd]
git = "https://github.com/rust-lang-nursery/packed_simd"
features = ["default", "into_bits", "coresimd"]


[profile.dev]
overflow-checks = false
