[package]
name = "r64emu"
version = "0.1.0"
authors = ["Giovanni Bajo <rasky@develer.com>"]

[workspace]
members = [
    "emu",
    "emu/emu-derive",
    "emu/cpu/mips64",
]

[dependencies]
emu = {path =  "./emu"}
emu_derive = {path =  "./emu/emu-derive"}
mips64 = {path =  "./emu/cpu/mips64"}
num = "0.1.42"
error-chain = "0.12.0"
pretty-hex = "0.1.0"
slog-term = "2.4.0"
crc = "^1.0.0"
lazy_static = "1.0"
bitflags = "1.0"
bit_field = "0.9.0"
enum-map = "0.4.0"

[dev-dependencies]
image = "0.13"
base64 = "0.9.2"
failure = "0.1.1"
serde = "1.0.80"
serde_derive = "1.0.80"
toml = "0.4.8"

[dependencies.byteorder]
version = "1"
features = ["i128"]

[dependencies.packed_simd]
git = "https://github.com/rust-lang-nursery/packed_simd"
features = ["default", "into_bits", "coresimd"]

[dependencies.slog]
version = "2.4.1"
features = ["nothreads"]

[patch.crates-io]
"slog" = { git="https://github.com/rasky/slog", branch="nothreads" }
"imgui-sdl2" = { git="https://github.com/rasky/rust-imgui-sdl2", branch="r64emu" }
"imgui-opengl-renderer" = { git="https://github.com/rasky/rust-imgui-opengl-renderer", branch="r64emu"}

[profile.dev]
overflow-checks = false
