[package]
name = "r64emu"
version = "0.1.0"
authors = ["Giovanni Bajo <giovannibajo@gmail.com>"]
edition = "2018"
description = "Nintendo 64 Emulator"
homepage = "https://github.com/rasky/r64emu"

[workspace]
members = [
    "emu",
    "emu/emu-derive",
    "emu/cpu/mips64",
    "tests/gengolden",
]

[dependencies]
emu = {path =  "./emu"}
emu_derive = {path =  "./emu/emu-derive"}
mips64 = {path =  "./emu/cpu/mips64"}
num = "0.1.42"
error-chain = "0.12.0"
pretty-hex = "0.1.0"
crc = "^1.0.0"
lazy_static = "1.0"
bitflags = "1.0"
bitfield = "0.13.1"
bit_field = "0.9.0"
enum-map = "0.4.0"
serde = "1.0.82"
serde_derive = "*"
structopt = "0.2.10"

[dev-dependencies]
base64 = "0.9.2"
failure = "0.1.1"
serde = "1.0.80"
serde_derive = "1.0.80"
toml = "0.4.8"

[dev-dependencies.image]
version = "0.20"
default-features = false
features = ["png_codec"]

[dependencies.byteorder]
version = "1"
features = ["i128"]

[dependencies.packed_simd]
git = "https://github.com/rust-lang-nursery/packed_simd"
package = "packed_simd_2"
features = ["default", "into_bits"]

[dependencies.slog]
version = "2"
features = ["nothreads"]

[patch.crates-io]
# While developing on imgui-rs:
"imgui" = { path="vendor/imgui-rs" }
"imgui-sys" = { path="vendor/imgui-rs/imgui-sys" }
"imgui-sdl2" = { path="vendor/rust-imgui-sdl2" }

#"imgui" = { git="https://github.com/rasky/imgui-rs", branch="docking" }
#"imgui-sys" = { git="https://github.com/rasky/imgui-rs", branch="docking" }
#"imgui-sdl2" = { git="https://github.com/rasky/rust-imgui-sdl2" }

[profile.dev]
overflow-checks = false

[profile.release]
debug = true