[package]
name = "emu"
version = "0.1.0"
authors = ["Giovanni Bajo <rasky@develer.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
enum-map = "0.4.0"
static_assertions = "0.2.5"
num = "0.1.42"
num-traits = "*"
bitflags = "1.0"
array-macro = "1.0"
emu_derive = { path="emu-derive" }
slog = "2"
typenum = "1.10.0"
imgui = { git="https://github.com/Gekkio/imgui-rs.git", branch="master"}
imgui-sys = { git="https://github.com/Gekkio/imgui-rs.git", branch="master"}
imgui-sdl2 = "0.3.0"
imgui-opengl-renderer = "0.3.0"
gl = "0.10.0"
runtime-fmt = "0.3.0"
rustc-hash = "1.0.1"
serde = "1.0.82"
serde_derive = "*"
serde_bytes = "*"
futures = "0.1"
lz4 = "1.23.1"
rmp-serde = "0.13.7"
hashbrown = "0.1"
failure = "0.1.3"
atty = "0.2.11"

[dependencies.sdl2]
version = "^0"
features = ["static-link","bundled"]

[dev-dependencies]
serde_json = "1.0"
bincode = "1.0"
