[package]
name = "emu"
description = "A collection of libraries to write videogame emulators"
version = "0.0.1"
authors = ["Giovanni Bajo <rasky@develer.com>"]
edition = "2018"
repository = "https://github.com/rasky/r64emu"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1"
enum-map = "0.4.0"
static_assertions = "0.2.5"
num = "0.1.42"
num-traits = "*"
bitflags = "1.0"
array-macro = "1.0"
emu_derive = { path="emu-derive", version="0.0.1" }
slog = "2"
typenum = "1.10.0"
imgui = "0.2.1"
imgui-sys = "^0.2.0"
imgui-sdl2 = "0.7.0"
imgui-opengl-renderer = "0.6.0"
gl = "0.10.0"
runtime-fmt = "0.4.1"
rustc-hash = "1.0.1"
serde = "1.0.82"
serde_derive = "*"
serde_bytes = "*"
futures = "0.1"
lz4 = "1.23.1"
rmp-serde = "0.13.7"
hashbrown = "0.1"
failure = "0.1.3"
atty = "0.2.11"
directories = "1.0"
indexmap = "1.0.2"
serde_json = "1.0"
rusqlite = { version="0.20.0", features=["bundled"] }
tinyfiledialogs = "3.0"
textwrap = "0.11"

[dependencies.sdl2]
version = "^0"
features = ["static-link","bundled"]

[dev-dependencies]
serde_json = "1.0"
bincode = "1.0"
